@@ -82,38 +82,6 @@ public class ReleaseCrudHandler extends AbstractCrudHandler<Release, ReleaseResp
 		throw new NotImplementedException("Release can't be deleted");
 	}
 
-	@Override
-	public void handleCreate(InternalActionContext ac) {
-		utils.asyncTx(ac, (tx) -> {
-			Database db = MeshInternal.get().database();
-			User user = ac.getUser();
-
-			ResultInfo info = db.tx(() -> {
-				SearchQueueBatch batch = searchQueue.create();
-				RootVertex<Release> root = getRootVertex(ac);
-				Release created = root.create(ac, batch);
-				Project project = created.getProject();
-				ReleaseResponse model = created.transformToRestSync(ac, 0);
-				ResultInfo resultInfo = new ResultInfo(model, batch);
-				resultInfo.setProperty("path", created.getAPIPath(ac));
-				resultInfo.setProperty("projectUuid", project.getUuid());
-				resultInfo.setProperty("releaseUuid", created.getUuid());
-				JobRoot jobRoot = boot.jobRoot();
-				jobRoot.enqueueReleaseMigration(user, created);
-				return resultInfo;
-			});
-
-			// The release has been created now lets start the release migration (specific node migration)
-			vertx.eventBus().send(JOB_WORKER_ADDRESS, null);
-
-			ac.setLocation(info.getProperty("path"));
-			// Finally process the batch
-			info.getBatch().processSync();
-			return info.getModel();
-		}, model -> ac.send(model, CREATED));
-
-	}
-
 	/**
 	 * Handle getting the schema versions of a release.
 	 * 
